{{$NEXT}}

1.302125  2018-02-21 23:10:39-08:00 America/Los_Angeles

    - No changes since trial

1.302124  2018-02-13 22:02:48-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix a test to skip without threads

1.302123  2018-02-13 21:39:31-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Make it possible to disable IPC

1.302122  2018-02-05 08:13:56-08:00 America/Los_Angeles

    - Add 'mode' ro render facet

1.302121  2018-02-04 13:27:41-08:00 America/Los_Angeles

    - Update Copyright
    - Add 'render' facet

1.302120  2017-11-29 18:49:15-08:00 America/Los_Angeles

    - No Changes since last trial

1.302119  2017-11-28 15:35:42-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix IPC reload bug

1.302118  2017-11-28 10:14:12-08:00 America/Los_Angeles

    - No Changes since last trial

1.302117  2017-11-27 14:10:53-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix event Out of Order bug
    - Add driver_abort() hook for IPC Drivers

1.302116  2017-11-23 15:14:26-08:00 America/Los_Angeles (TRIAL RELEASE)

    - add better interface for ipc_wait

1.302115  2017-11-22 21:14:55-08:00 America/Los_Angeles (TRIAL RELEASE)

    - ipc_wait now reports exit and signal values

1.302114  2017-11-21 15:28:39-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Added pre-subtest hook to Test2::API (#801 from dakkar)

1.302113  2017-11-20 14:04:16-08:00 America/Los_Angeles

    - Fix SIGPIPE in IPC test
    - Mark a test as usually AUTHOR_TESTING only

1.302112  2017-11-20 06:43:16-08:00 America/Los_Angeles

    - Fix test on threaded 5.8

1.302111  2017-11-18 09:54:33-08:00 America/Los_Angeles

    - Remove debugging from previous trial

1.302110  2017-11-17 09:47:23-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix test breakage (from previous trial) on older perls

1.302109  2017-11-17 09:35:48-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix some fragile tests
    - Add debugging to API/Instance.t for a cpan-testers failure
