@@ -5,7 +5,7 @@ use warnings;
 our $VERSION = '1.302126';
 
 BEGIN { require Test2::Event::Ok; our @ISA = qw(Test2::Event::Ok) }
-use Test2::Util::HashBase qw{subevents buffered subtest_id};
+use Test2::Util::HashBase qw{subevents buffered subtest_id subtest_uuid};
 
 sub init {
     my $self = shift;
