@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add optional UUID tagging
+
 1.302125  2018-02-21 23:10:39-08:00 America/Los_Angeles
 
     - No changes since trial
